--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <h3>Where A Traditional Past Meets A Modern Future.</h3>
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img
+      <img src="images/transit.jpg">
+      
     </div>
   </div>
 </body>
