Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <h2>Where A Traditional Past Meets A Modern Future.</h2>
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img alt="" src="images/transit.jpg">
-      <h3></h3>
+      <img alt="Modern Transit" src="images/transit.jpg">
+      <h3>Travel</h3>
+      <p></p>
     </div>
   </div>
 </body>
