Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <img alt="The roads of Riyadh" src="images/transportation/camels-in-truck.jpeg">
       <h3>Sources</h3>
       <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</a>
-      <a>Wikipedia</a>
+      <a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
     </div>
   </div>
 </body>
